<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dp_16">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_16"
        android:text="@string/book"
        android:textSize="@dimen/sp_21"
        android:textStyle="bold" />

    <!--Product Name Field-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_product_name"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <!--Price Field-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_product_price"
            android:inputType="numberDecimal" />

    </android.support.design.widget.TextInputLayout>

    <!--Quantity Field-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_product_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/product_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_product_quantity"
            android:inputType="numberSigned" />

    </android.support.design.widget.TextInputLayout>

    <!--Supplier Label-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_16"
        android:textSize="@dimen/sp_21"
        android:text="@string/supplier"
        android:textStyle="bold" />

    <!--Supplier Name Field-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_supplier_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/supplier_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_supplier_name"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <!--Supplier Contact Field-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_supplier_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/supplier_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_supplier_phone_number"
            android:inputType="phone" />

    </android.support.design.widget.TextInputLayout>

</LinearLayout>