<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/book_card"
    style="@style/AppTheme.Card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/book_name"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_16"
            android:text="@string/edit_product_name"
            android:textSize="@dimen/sp_21"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/book_edit_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/book_price"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:text="@string/edit_product_price"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/book_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/book_name"
            app:layout_constraintVertical_bias="1" />

        <TextView
            android:id="@+id/book_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_8"
            android:gravity="center"
            android:text="@string/zero"
            android:textSize="@dimen/sp_21"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/book_sell_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/book_edit_button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/book_sell_button"
            android:layout_width="@dimen/dp_21"
            android:layout_height="@dimen/dp_21"
            android:background="@drawable/ic_action_cart"
            android:backgroundTint="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/book_edit_button"
            android:layout_width="@dimen/dp_21"
            android:layout_height="@dimen/dp_21"
            android:layout_marginEnd="@dimen/dp_16"
            android:background="@drawable/ic_mode_edit"
            android:backgroundTint="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/book_sell_button" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>